# small-server

./: LICENSE  pyproject.toml
src/: main.py  server.py
src/controller/: __init__.py  api.py  index.html  ui.py
