[tool.poetry]
name = "small-server"
version = "0.1.0"
description = ""
authors = ["Andy Grigg <mail@andygrigg.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
